<?xml version="1.0"?>
<package format="2">
  <name>cpu_tsdf</name>
  <version>0.0.0</version>
  <description>CPU_TSDF</description>

  <maintainer email="saulnier@seas.upenn.edu">Kelsey Saulnier</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>eigen_checks</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>minkindr</depend>
  <!-- This is an OPTIONAL dep! Will use system library if not present. -->
  <depend>protobuf_catkin</depend>
  <depend>boost</depend>
  <depend>pcl</depend>

</package>
